--- a/MyCrowdFund.Web/Views/Project/ProjectDetails.cshtml
+++ b/MyCrowdFund.Web/Views/Project/ProjectDetails.cshtml
@@ -1,49 +1,37 @@
 ﻿@model MyCrowdFund.Web.Models.ProjectViewModel
 
-@{
-    <img src="@Model.Proj.Photo" class="card-img-top">
+    <div class="col-sm-5 ">
+      @{
+         <img src="@Model.Proj.Photo" class="card-img-top">
 
-    <div @*class="card" style="width: 18rem;"*@>
-
-
-
-        <div @*class="card-body"*@>
-            <h5 @*class="card-title"*@> Title: @Model.Proj.Title</h5>
-            <h5 @*class="card-title"*@>Category: @Model.Proj.Category</h5>
-            <h5 @*class="card-title"*@>Total Cost: @Model.Proj.Cost</h5>
-
+        <div>
+        <div>
+            <h5>Title: @Model.Proj.Title</h5>
+            <h5>Category: @Model.Proj.Category</h5>
+            <h5>Total Cost: @Model.Proj.Cost</h5>
         </div>
-
 
         <div class="progress">
-            @*<h5>Financial Progress</h5>*@
-            <div class="progress-bar" role="progressbar" style="width: @Model.Prog%" aria-valuenow="@Model.Prog" aria-valuemin="0" aria-valuemax="100"> <h5>Financial Progress</h5> </div>
+            <div class="progress-bar" role="progressbar" style="width: @Model.Prog%" 
+                aria-valuenow="@Model.Prog" aria-valuemin="0" aria-valuemax="100"> <h5>Financial Progress</h5> </div>
         </div>
 
-
         <p>
-
-            <div class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-                Rewards
+            <div class="btn btn-primary" data-toggle="collapse" href="#collapseExample" 
+                    role="button" aria-expanded="false" aria-controls="collapseExample">
+                    Rewards
             </div>
-
         </p>
 
-
-
-        @{
+         @{
             foreach ( var r in Model.RewardList ) {
-
-
-
 
                 <div class="collapse card-columns" id="collapseExample">
                     <div>
 
-
-                        <h5 class="card-title">@r.Title</h5>
-                        <h5 class="card-title">@r.Price</h5>
-                        <p class="js-reward-id" id=" reward" style="display :none"> @r.Id </p>
+                         <h5 class="card-title">@r.Title</h5>
+                         <h5 class="card-title">@r.Price</h5>
+                         <p class="js-reward-id" id=" reward" style="display :none"> @r.Id </p>
 
                         @{
                             if ( !User.IsInRole( "Backer" ) ) {
@@ -51,52 +39,25 @@
 
                             } else {
                                 <button type="button" class="btn btn-primary js-buy">Buy </button>
-
                             }
-
                         }
-
 
                     </div>
                 </div>
-
-
-
             }
-
-
 
             <div>
 
-                @{
-                    if ( User.IsInRole( "ProjectCreator" ) ) {
-                        <a href="@Url.Action("Create", "Reward", new { id = Model.Proj.Id } ) " class="btn btn-primary" value="@Model.Proj.Id">Create Reward</a>
-
-
-                    }
-
-
+             @{
+                if ( User.IsInRole( "ProjectCreator" ) ) {
+                    <a href="@Url.Action("Create", "Reward", new { id = Model.Proj.Id, creatorId = Model.UserId } ) " class="btn btn-primary" value="@Model.Proj.Id">Create Reward</a>
                 }
-
-
+              }
             </div>
-
-
-
-
-
-
-
+          }
+        </div>
         }
-
     </div>
-
-
-    @*<a href="@Url.Action("Create", "Reward", new { id = Model.Proj.Id } ) " class="btn btn-primary" value="@Model.Proj.Id">Create Reward</a>*@
-
-
-
-}
 
 <div class="alert alert-danger js-buy-reward-alert" role="alert"
      style="display: none">
