--- a/MyCrowdFund.Web/Views/Home/Index.cshtml
+++ b/MyCrowdFund.Web/Views/Home/Index.cshtml
@@ -1,43 +1,43 @@
 ﻿@model MyCrowdFund.Web.Models.ProjectViewModel
 
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 
-
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light ">
+<nav class="navbar navbar-expand-lg navbar-light bg-light  ">
     <a class="navbar-brand " asp-area="" asp-controller="Home" asp-action="Index">CrowdFund</a>
-
     <div class=" collapse navbar-collapse">
-        <ul class="navbar-nav mx-auto">
+        <ul class="navbar-nav mr-auto ml-auto">
             @{
                 foreach ( var category in Enum.GetValues( typeof( MyCrowdFund.ProjectCategory ) ).Cast<MyCrowdFund.ProjectCategory>().ToList().Skip( 2 ) ) {
 
-                    <li class="nav-item mr-1">
+                    <li class="nav-item ">
                         <a class="nav-link " href="@Url.Action("BrowseByCategory", "Project",
-                                                          new { category = category } ) ">@category</a>
+                                                              new { category = category } ) ">@category</a>
                     </li>
                 }
             }
-
-
-
-            <ul class="nav-item  dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Menu</a>
-                @*<ul  class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    @User.Identity.Name
-                </ul>*@
-
-            <div class="dropdown-menu">
-
+        </ul>
+    </div>
+    <div class="nav-item ml-auto mr-lg-5 ">
+        <form class="form-inline my-2 my-lg-0 js-search " method="post"
+              action="@Url.Action( "SearchProject", "Home" )">
+            <input class="form-control mr-2 js-search-input" type="search" id="objectName" name="objectName" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0 js-search-submit" type="submit">Search</button>
+        </form>
+    </div>
+    <div class="mr-lg-5">
+        <div class="nav-item  dropdown mr-lg-5 ">
+            <a class="nav-link fas fa-bars mr-5 " data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> </a>
+            <div class="dropdown-menu ">
                 @{
                     if ( User.IsInRole( "ProjectCreator" ) ) {
-                        <a class="dropdown-item"> @User.Identity.Name</a>
+                        <a class="dropdown-item" href="@Url.Action("Profile", "ProjectCreator", new { creatorId = Model.UserId } ) "> @User.Identity.Name</a>
                         <a class="dropdown-item" href="@Url.Action("Create", "Project", new { id = Model.UserId }  )"> Create Project</a>
                         <a class="dropdown-item" href="@Url.Action("BrowseMyProjects", "ProjectCreator", new { id = Model.UserId } )"> Browse My Projects</a>
                         <a class="dropdown-item" href="@Url.Action("Logout", "Account")"> Logout</a>
 
                     } else if ( User.IsInRole( "Backer" ) ) {
 
-                        <a class="dropdown-item"> @User.Identity.Name</a>
+                        <a class="dropdown-item" href="@Url.Action("Profile", "Backer", new { backerId = Model.UserId } ) "> @User.Identity.Name</a>
                         <a class="dropdown-item" href="@Url.Action("BrowseMyProjects", "Backer", new { id = Model.UserId } )"> Browse My Projects</a>
                         <a class="dropdown-item" href="@Url.Action("Logout", "Account")"> Logout</a>
 
@@ -45,99 +45,62 @@
 
                         <a class="dropdown-item" href="@Url.Action("Login", "Account")"> Login</a>
                     }
-
                 }
-
-
-
             </div>
-            </ul>
-
-
-        </ul>
-
-        
-
-
-
-    </div>
-
-   
-
-</nav>
-
-
-
-
-
-
-
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active ">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTp9GcEC078Mry3ooSX0G1CbvIqUvNlbMlRVswLWMngFohpL5N6&usqp=CAU" class="d-block w-100" >
         </div>
+    </div>
+</nav>
+<br>
+<div style="width:1500px; margin:0 auto;">
+    <div id="carouselExampleControls" class="carousel slide text-center " data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active ">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTp9GcEC078Mry3ooSX0G1CbvIqUvNlbMlRVswLWMngFohpL5N6&usqp=CAU" class="d-block w-100">
+            </div>
+            @{
+                if ( Model.BestProjects != null ) {
+                    foreach ( var project in Model.BestProjects ) {
+
+                        <div class="carousel-item">
+                            <a href="@Url.Action("ProjectDetails", "Project", new { id = project.Id } ) ">
+                                <img src="@project.Photo" class="d-block w-100">
+                            </a>
+                        </div>
+                    }
+                }
+            }
+        </div>
+
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</div>
+<br>
+<div style="width:1800px; margin:0 auto;">
+    <div class="row card-columns  ">
         @{
+            if ( Model.ProjectList != null ) {
 
-            foreach ( var project in Model.BestProjects ) {
+                foreach ( var p in Model.ProjectList ) {
 
-                <div class="carousel-item">
-                    <a href="@Url.Action("ProjectDetails", "Project", new { id = project.Id } ) ">
-                        <img src="@project.Photo" class="d-block w-100">
-                    </a>
-                </div>
+                    <div class="card " style="width: 27rem;">
+                        <a href="@Url.Action("ProjectDetails", "Project", new { id = p.Id, creatorId = Model.UserId } ) ">
 
+                            <img src="@p.Photo" class="card-img-top">
+                        </a>
+                        <div class="card-body">
+                            <h5 class="card-title">@p.Title</h5>
+                            <h5 class="card-title">@p.Category</h5>
+                        </div>
+                    </div>
+                }
             }
         }
-
     </div>
-
-
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
 </div>
-
-<br>
-<div class="row card-columns">
-    @{
-
-        foreach ( var p in Model.ProjectList ) {
-
-
-
-
-        <div class="card " style="width: 22rem;">
-                <a href="@Url.Action("ProjectDetails", "Project", new { id = p.Id } ) ">
-                    
-                    <img src="@p.Photo" class="card-img-top" >
-                </a>
-
-                <div class="card-body">
-                    <h5 class="card-title">@p.Title</h5>
-                    <h5 class="card-title">@p.Category</h5>
-
-                    @*<a href="@Url.Action("ProjectDetails", "Project", new { id = p.Id } ) " class="btn btn-primary" value="@p.Id">Details</a>*@
-                </div>
-        </div>
-
-
-
-
-
-
-
-
-
-        }
-    }
-</div>
-    
-
-
-
