--- a/MyCrowdFund.Web/Views/Reward/Create.cshtml
+++ b/MyCrowdFund.Web/Views/Reward/Create.cshtml
@@ -2,47 +2,28 @@
 
     <form class="js-reward col-md-4" method="post" action="@Url.Action("Create", "Reward")">
 
-        @*<div class="form-group">
-            <label for=" @Html.IdFor(r => r.Title)">Title</label>
-            @Html.TextBoxFor( r => r.Title,
-           new { @class = "form control js-title", placeholder = "enter title" } )
-        </div>*@
         <div class="form-group">
             <label>Title</label>
             <input type="text" class="form-control js-title">
-        </div>
-        @*<div class=" form-group">
-            <label for=" @Html.IdFor(r => r.Description)">Desc</label>
-            @Html.TextBoxFor( r => r.Description,
-           new { @class = "form-control js-desc", placeholder = "enter desc" } )
-        </div>*@
+        </div>   
         <div class="form-group">
             <label>Description</label>
             <input type="text" class="form-control js-desc">
         </div>
-        @*<div class=" form-group ">
-            <label for=" @Html.IdFor(r => r.Price)">Price</label>
-            @Html.TextBoxFor( r => r.Price,
-           new { @class = "form-control js-price", placeholder = "enter price" } )
-
-        </div>*@
         <div class="form-group">
             <label>Price</label>
             <input type="text" class="form-control js-price">
         </div>
-
-        <div class=" form-group ">        
+        <div class=" form-group ">
             @Html.HiddenFor( r => r.TempId,
           new { @class = "form-control js-tid", placeholder = "enter tid" } )
-
+        </div>
+        <div class=" form-group ">
+            @Html.HiddenFor( r => r.CreatorId,
+          new { @class = "form-control js-cid", placeholder = "enter cid" } )
         </div>
 
-
-     
-
-
         <button type="button" class="btn btn-primary js-reward-submit"> Submit</button>
-
     </form>
 
 <div class="alert alert-danger js-create-reward-alert" role="alert"
