--- a/MyCrowdFund.Web/Views/Shared/_Layout.cshtml
+++ b/MyCrowdFund.Web/Views/Shared/_Layout.cshtml
@@ -7,66 +7,18 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body>
-    @*<header>
-
-
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MyCrowdFund.Web</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        @{
-                            foreach ( var category in Enum.GetValues( typeof( MyCrowdFund.ProjectCategory ) ).Cast<MyCrowdFund.ProjectCategory>().ToList().Skip( 1 ) ) {
-
-                                <li class="nav-item">
-                                    <a class="nav-link active" href="@Url.Action("BrowseByCategory", "Project", new { category = category } ) ">@category</a>
-                                </li>
-                            }
-                        }
-
-                    
-                    </ul>
-
-                    
-                    
-
-                </div>
-            </div>
-        </nav>
-
-
-
-
-
-
-
-
-    </header>*@
-
-
-
-
-
-
-    <div class="container">
-        <main role="main" class="pb-xl-5">
-            @RenderBody()
-        </main>
-    </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2020 - MyCrowdFund.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @RenderSection("Scripts", required: false)
+<body>  
+ <main role="main" class="pb-xl-5">
+    @RenderBody()
+ </main>
+ <footer class="border-top footer text-muted">
+  <div @*class="container"*@>
+    &copy; 2020 - MyCrowdFund.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+  </div>
+ </footer>
+ <script src="~/lib/jquery/dist/jquery.min.js"></script>
+ <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+ <script src="~/js/site.js" asp-append-version="true"></script>
+ @RenderSection("Scripts", required: false)
 </body>
 </html>
